update initial code for deployment controller
